# ainews-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  FIXES_PLAN.md  GEMINI.md  PLAN.md  PROJECT_BRIEF.md  README.md  config.yaml  package-lock.json  vercel.json
.agent/rules/: 00-project-instructions.md  context-isolation.md  editing-guide.md  git-guide.md
.agent/workflows/: brainstorm.md  create-issue.md  create-plan.md  document.md  execute.md  explore.md  fix-issues.md  peer-review.md  (+4 more)
.gemini/: MEMORY.md
backend/: .dockerignore  .env.example  Dockerfile  TESTING.md  config.py  deploy.sh  gmail_fetcher.py  main.py  processor.py  pyproject.toml  requirements.txt  run_tests.sh  simple_test.py  test_api_endpoint.py  test_connection.py  test_fetch_newsletter.py  test_gcp_connection.py  test_gemini.py  test_gemini3_pro.py  test_gemini_models.py  test_pipeline.py  test_tts_voice.py  voice_session.py
backend/scripts/: _common.py  backfill_chinese.py  backfill_chinese_section.py  backfill_section_headers.py  process_test.py
backend/tests/: conftest.py  test_gmail_fetcher.py  test_multi_source.py  test_processor_pure.py
docs/: 00-PROJECT-BRIEF.md  01-mvp-implementation-plan.md  03-cloud-scheduler-setup-plan.md  04-scheduler-resilience-fix-plan.md  05-topic-grouping-plan.md  07-voice-qa-mediarecorder-plan.md  08-ios-audio-playback-fix-plan.md  11-segment-playback-and-pwa-state-plan.md  12-ui-ux-redesign-plan.md  13-voice-commands-plan.md  14-extract-admin-scripts-plan.md  16-chinese-localization-plan.md  19-discord-reddit-consolidation-plan.md  20-rss-full-content-plan.md  CICD_SETUP.md  IMPLEMENTATION_PLAN.md  PEER_REVIEW_RESPONSE.md  SETUP.md  USER_GUIDE.md  bilingual-newsletter-plan.md  centralized-config-plan.md  cloud-scheduler-setup-plan.md  mvp-implementation-plan.md  parallel-features-plan.md  qa-localization-fix-plan.md  qa-ux-improvements-plan.md  scheduler-resilience-fix-plan.md  section-headers-plan.md  segment-playback-and-pwa-state-plan.md  typescript-migration-plan.md  voice-commands-plan.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
poster_zh/: aina-poster-final.html  crop_qr.py  process_qr.py  qr_base64.txt  update_poster.py
scripts/: sync-codex-skills.sh  sync-commands.sh
(+103 files in other folders)
