[project]
name = "newsletter-audio-processor"
version = "0.1.0"
description = "Backend service for processing newsletters into audio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "google-cloud-texttospeech>=2.18.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-aiplatform>=1.70.0",
    "supabase>=2.9.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "feedparser>=6.0.11",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
