[project]
name = "newsletter-audio-processor"
version = "0.1.0"
description = "Backend service for processing newsletters into audio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "google-cloud-texttospeech>=2.18.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-aiplatform>=1.70.0",
    "google-genai>=1.59.0",
    "supabase>=2.9.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "feedparser>=6.0.11",
    "mutagen>=1.47.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E402",   # imports after load_dotenv() is intentional
    "E501",   # line length handled by formatter
    "UP032",  # allow .format() instead of f-strings
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Security",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
